[package]
name = "buttsbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = ["full"] }
rand = "0.8"
serenity = {version = "0.11", default_features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"] }
env_logger = "0.9"
log = "0.4"
dotenv = "0.15"
hypher = { version = "0.1", default-features = false, features = ["english"] }
once_cell = "1.14.0"
lazy_static = "1.4.0"
